some quick changes

--- a/Olympic_Research_Project.ipynb
+++ b/Olympic_Research_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPYvDfiim+M5qbGIcWvcs+/",
+      "authorship_tag": "ABX9TyNodueQgFvgwkiXBNHyRMWz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1478,12 +1478,14 @@
         "\n",
         "# Train model\n",
         "winter_model = LinearRegression()\n",
+        "\n",
+        "#Fit Model\n",
         "winter_model.fit(X_train, y_train)\n",
         "\n",
         "# Predict\n",
         "pred = winter_model.predict(X_test)\n",
         "\n",
-        "# Plot predictions\n",
+        "# Plot\n",
         "plt.scatter(y_test, pred, alpha=0.5)\n",
         "plt.xlabel('Actual Medal (0 = No, 1 = Yes)')\n",
         "plt.ylabel('Predicted Medal Probability')\n",
@@ -1496,9 +1498,9 @@
           "height": 472
         },
         "id": "ZMTtwNu6Leek",
-        "outputId": "34841530-680f-497a-909f-1b16db3cda3f"
+        "outputId": "4d22b26d-c469-4941-a118-7f2a8c54b815"
       },
-      "execution_count": 70,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1520,8 +1522,6 @@
         "print('r squared: ', r2_score(y_test, pred))\n",
         "\n",
         "y_pred_binary = (pred >= 0.5).astype(int)\n",
-        "\n",
-        "# Calculate accuracy\n",
         "accuracy = accuracy_score(y_test, y_pred_binary)\n",
         "print(\"Accuracy: \", accuracy)"
       ],
@@ -1530,9 +1530,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kn1mrJ4aXozm",
-        "outputId": "90b579e0-ae92-4f6b-f4d2-4037d2eedb4c"
+        "outputId": "82eb73c1-b0a7-4d40-b827-8d805a2a4049"
       },
-      "execution_count": 71,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,12 +1567,14 @@
         "\n",
         "# Train model\n",
         "summer_model = LinearRegression()\n",
+        "\n",
+        "#Fit Model\n",
         "summer_model.fit(X_train, y_train)\n",
         "\n",
         "# Predict\n",
         "pred = summer_model.predict(X_test)\n",
         "\n",
-        "# Plot predictions\n",
+        "# Plot\n",
         "plt.scatter(y_test, pred, alpha=0.5)\n",
         "plt.xlabel('Actual Medal (0 = No, 1 = Yes)')\n",
         "plt.ylabel('Predicted Medal Probability')\n",
@@ -1585,9 +1587,9 @@
           "height": 472
         },
         "id": "92SJwrMyY9LG",
-        "outputId": "b46d0b6e-6481-47ec-f0f5-79fcaf369bee"
+        "outputId": "d2ee653d-2ace-49c1-914a-c1e2b96f1ed2"
       },
-      "execution_count": 72,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1610,7 +1612,6 @@
         "\n",
         "y_pred_binary = (pred >= 0.5).astype(int)\n",
         "\n",
-        "# Calculate accuracy\n",
         "accuracy = accuracy_score(y_test, y_pred_binary)\n",
         "print(\"Accuracy:\", accuracy)"
       ],
@@ -1619,9 +1620,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tpHmNIBvZXQc",
-        "outputId": "f7241f84-9d08-4f7a-f94e-06628c0fcaed"
+        "outputId": "58b347f6-b51d-4ec6-b451-b7994db2aa26"
       },
-      "execution_count": 73,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "stream",
